Ensure rounding of decimals to not overflow display

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   min-width: 400px;
   min-height: 600px;
   padding: 10px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .container {
@@ -67,10 +67,9 @@
 
 .mini-display {
   text-align: right;
-  font-size: 12px;
+  font-size: 18px;
   height: 20px;
 }
-
 
 button {
   width: 20.5%;
